AWS - WebScrapping code in EC2 and Migration of nonmatch (0-35 batches) to S3 nonmatch-query bucket

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ selenium = "*"
 tqdm = "*"
 sqlalchemy = "*"
 v-log = "*"
+youtube-dl = "*"
+awscli = "*"
+botocore = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
