--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\David\\.virtualenvs\\project-PFX4TEXB\\Scripts\\python.exe"
+    "python.pythonPath": "/root/.local/share/virtualenvs/Music_Emotions-u30QWrxn/bin/python"
 }
