--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 data/MSD/youtubeURL.db
 data/MSD/clean.db
 data/MSD/raw.db
+lyrics_scrapping/lyrics_firstattempt.csv
+lyrics_scrapping/lyrics_firstattempt
