--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+matplotlib = "*"
 
 [packages]
 jupyter = "*"
@@ -19,6 +20,9 @@ botocore = "*"
 boto3 = "*"
 vadersentiment = "*"
 spotipy = "*"
+python-speech-features = "*"
+librosa = "*"
+numba = "==0.45.0"
 
 [requires]
 python_version = "3.7"
